--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "tap ./test"
+    "test": "node test/tree.js"
   },
   "repository": {
     "type": "git",
